--- a/reloader-fidget-app/welcome.html
+++ b/reloader-fidget-app/welcome.html
@@ -13,7 +13,7 @@
     <div class="px-4 py-3 my-2 text-center">
       <h1 class="display-6 fw-bold text-primary">Hello world!</h1>
     </div>
-    <form method="post" action="/hello.html">
+    <form method="post" action="/hidden/hello.html">
       <div class="col-md-6 mx-auto text-center">
         <label for="name" class="form-label fw-bold fs-5">Could you please tell me your name?</label>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center align-items-center my-1">
